<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.touristinfoapp.NewCity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_addNewPlace"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/addPlace"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/et_newPlaceTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newCityTitle"
            android:padding="5dp"
            />

        <TextView
            android:id="@+id/tv_newPlaceTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"/>


        <ImageView
            android:id="@+id/iv_newPlaceImage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/photo"
            />

        <EditText
            android:id="@+id/et_newPlaceDiscription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newCityDetail"
            android:padding="15dp"/>

        <TextView
            android:id="@+id/tv_newPlaceDiscription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"/>

        <Button
            android:id="@+id/bt_addPhoto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/newImage_button"
            android:padding="5dp"/>

        <Button
            android:id="@+id/bt_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:padding="15dp"/>


    </LinearLayout>



</android.support.constraint.ConstraintLayout>



