<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="3dp"
        android:padding="4dp"
        android:layout_gravity="center"
        app:cardCornerRadius="4dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/title"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/FamousPlaces_thumbnail"
                android:scaleType="fitXY"
                android:padding="6dp"
                android:src="@drawable/photo"
                />

            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/details"
                />

            <Button
                android:id="@+id/bt_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/location_button"
                />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>